--- a/app/src/main/res/layout-sw720dp/activity_add_equipe.xml
+++ b/app/src/main/res/layout-sw720dp/activity_add_equipe.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:id="@+id/layout_filter">
 
-
         <TextView
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
@@ -42,7 +41,10 @@
                 android:id="@+id/viewText"
                 android:text="@string/tank_equipe"
                 android:textSize="30sp"
-                android:layout_column="0" />
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_orange_dark"
+                android:layout_column="0"
+                android:layout_gravity="center_horizontal" />
 
             <Space
                 android:layout_width="50dp"
@@ -53,13 +55,13 @@
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:text="@string/title_activity_list_tank"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_orange_dark"
                 android:textSize="30sp"
                 android:id="@+id/viewText1"
-                android:layout_column="1" />
-
-
+                android:layout_column="1"
+                android:layout_gravity="center_horizontal" />
         </TableRow>
-
 
         <TableRow
             android:layout_width="match_parent"
@@ -92,8 +94,4 @@
                 />
         </TableRow>
     </TableLayout>
-
-
-
-
 </RelativeLayout>
