--- a/app/src/main/res/layout-sw720dp/activity_battle_tank_item.xml
+++ b/app/src/main/res/layout-sw720dp/activity_battle_tank_item.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="0dp"
         android:layout_toRightOf="@+id/imageGenreFlag"
         android:layout_alignWithParentIfMissing="false"
@@ -42,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_alignTop="@+id/butAdd"
         android:layout_toRightOf="@+id/butAdd"
         android:layout_marginLeft="5dp"
