--- a/app/src/main/res/layout/activity_battle_tank_item.xml
+++ b/app/src/main/res/layout/activity_battle_tank_item.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
+        android:textStyle="bold"
         android:layout_marginLeft="0dp"
         android:layout_alignWithParentIfMissing="false"
         android:layout_alignParentRight="false"
@@ -41,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
+        android:textStyle="bold"
         android:layout_alignTop="@+id/butAdd"
         android:layout_toRightOf="@+id/butAdd"
         android:layout_marginLeft="5dp"
@@ -84,8 +86,8 @@
 
     <ImageButton
         android:id="@+id/butVictoire"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="#00000000"
         android:contentDescription="-"
         android:src="@drawable/small_victoire"
