--- a/app/src/main/res/layout/activity_add_tank.xml
+++ b/app/src/main/res/layout/activity_add_tank.xml
@@ -111,6 +111,31 @@
                 android:inputType="number" />
         </TableRow>
 
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_marginTop="10px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/image"
+                android:textSize="20sp"
+                android:id="@+id/textView5"
+                android:layout_column="0" />
+
+            <EditText
+                android:layout_marginTop="10px"
+                android:id="@+id/editTextImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView5"
+                android:layout_toRightOf="@+id/textView5"
+                android:ems="10"
+                android:textSize="20sp"
+                android:inputType="text" />
+        </TableRow>
+
     </TableLayout>
 
     <RelativeLayout
