--- a/app/src/main/res/layout/activity_cavalier_main.xml
+++ b/app/src/main/res/layout/activity_cavalier_main.xml
@@ -14,13 +14,13 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:weightSum="1"
-        android:background="">
+        android:background="@drawable/cavalier_home">
 
         <Button
             android:layout_marginTop="50px"
             android:layout_width="400px"
             android:layout_height="80px"
-            android:text="Initialisation BD"
+            android:text="@string/action_init_data"
             android:id="@+id/button0"
             android:textSize="20sp"
             android:textColor="@android:color/white"
@@ -32,7 +32,7 @@
             android:layout_marginTop="50px"
             android:layout_width="400px"
             android:layout_height="80px"
-            android:text="Moniteurs"
+            android:text="@string/title_home_moniteurs"
             android:id="@+id/button1"
             android:textSize="20sp"
             android:textColor="@android:color/white"
@@ -43,7 +43,7 @@
             android:layout_marginTop="50px"
             android:layout_width="400px"
             android:layout_height="80px"
-            android:text="Cavaliers"
+            android:text="@string/title_home_cavaliers"
             android:id="@+id/button2"
             android:textColor="@android:color/white"
             android:textSize="20sp"
@@ -54,7 +54,7 @@
             android:layout_marginTop="50px"
             android:layout_width="400px"
             android:layout_height="80px"
-            android:text="Montures"
+            android:text="@string/title_home_montures"
             android:id="@+id/button3"
             android:textColor="@android:color/white"
             android:textSize="20sp"
@@ -65,7 +65,7 @@
             android:layout_marginTop="50px"
             android:layout_width="400px"
             android:layout_height="80px"
-            android:text="Nouveau cours"
+            android:text="@string/title_home_add_cours"
             android:id="@+id/button4"
             android:textColor="@android:color/white"
             android:textSize="20sp"
@@ -76,7 +76,7 @@
             android:layout_marginTop="50px"
             android:layout_width="400px"
             android:layout_height="80px"
-            android:text="Mes cours"
+            android:text="@string/title_home_list_cours"
             android:id="@+id/button5"
             android:textColor="@android:color/white"
             android:textSize="20sp"
