--- a/app/src/main/res/layout/activity_cavalier_list_personne_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_personne_item.xml
@@ -4,31 +4,31 @@
     android:id="@+id/item_personne">
 
 
-    <TextView android:text="Nom" android:id="@+id/nom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:textSize="20sp"
-        android:layout_marginLeft="40dp">
-    </TextView>
-
-
     <TextView android:text="Prénom" android:id="@+id/prenom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
-        android:layout_marginLeft="110dp">
+        android:layout_marginLeft="5dp">
     </TextView>
 
-    <TextView android:text="Sexe" android:id="@+id/sexe"
+    <TextView android:text="Nom" android:id="@+id/nom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:textSize="20sp"
-        android:layout_marginLeft="200dp">
+        android:layout_marginLeft="180dp">
     </TextView>
+
+
+    <!--<TextView android:text="Sexe" android:id="@+id/sexe"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:textSize="20sp"-->
+        <!--android:layout_marginLeft="220dp">-->
+    <!--</TextView>-->
 
 
 </RelativeLayout>
