--- a/app/src/main/res/layout-land/activity_cavalier_header_cours.xml
+++ b/app/src/main/res/layout-land/activity_cavalier_header_cours.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:id="@+id/item_personne">
-
+    android:id="@+id/header_cours"
+    >
 
 
     <TextView android:text="Date" android:id="@+id/date"
@@ -10,14 +10,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="5dp">
     </TextView>
+
 
     <TextView android:text="Cavalier" android:id="@+id/cavalier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="120dp">
     </TextView>
 
@@ -26,7 +29,34 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="220dp">
+    </TextView>
+
+    <TextView android:text="Moniteur" android:id="@+id/moniteur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="20sp"
+        android:layout_marginLeft="320dp">
+    </TextView>
+
+    <TextView android:text="Lieu" android:id="@+id/lieu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="420dp">
+    </TextView>
+
+    <TextView android:text="H" android:id="@+id/duree"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="510dp">
     </TextView>
 
 </RelativeLayout>
