--- a/app/src/main/res/layout-land/activity_cavalier_list_cours_item.xml
+++ b/app/src/main/res/layout-land/activity_cavalier_list_cours_item.xml
@@ -4,7 +4,6 @@
     android:id="@+id/item_personne">
 
 
-
     <TextView android:text="Date" android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,6 +11,7 @@
         android:textSize="20sp"
         android:layout_marginLeft="5dp">
     </TextView>
+
 
     <TextView android:text="Cavalier" android:id="@+id/cavalier"
         android:layout_width="wrap_content"
@@ -27,6 +27,30 @@
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
         android:layout_marginLeft="220dp">
+    </TextView>
+
+    <TextView android:text="Moniteur" android:id="@+id/moniteur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="20sp"
+        android:layout_marginLeft="320dp">
+    </TextView>
+
+    <TextView android:text="Lieu" android:id="@+id/lieu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="20sp"
+        android:layout_marginLeft="420dp">
+    </TextView>
+
+    <TextView android:text="Durée" android:id="@+id/duree"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="20sp"
+        android:layout_marginLeft="510dp">
     </TextView>
 
 </RelativeLayout>
