--- a/app/src/main/res/layout/activity_cavalier_header_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_header_cours.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:id="@+id/item_personne">
-
+    android:id="@+id/header_cours">
 
 
     <TextView android:text="Date" android:id="@+id/date"
@@ -10,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="5dp">
     </TextView>
 
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="120dp">
     </TextView>
 
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_marginLeft="220dp">
     </TextView>
 
