--- a/app/src/main/res/layout/activity_cavalier_list_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_cours.xml
@@ -5,6 +5,13 @@
     android:scrollbars="vertical"
     >
 
+    <include
+        android:id="@+id/header_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/activity_cavalier_header_cours" />
+
+
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
