--- a/app/src/main/res/layout/activity_cavalier_add_personne.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_personne.xml
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content"
                 android:text="Type Personne"
                 android:textSize="20sp"
+                android:textStyle="bold"
                 android:id="@+id/textViewType"
                 android:layout_column="0" />
 
