--- a/app/src/main/res/layout/activity_cavalier_list_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_cours.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:scrollbars="vertical"
     >
 
     <include
@@ -15,9 +14,18 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header_layout"
+        android:layout_above="@+id/footer_layout">
     </ListView>
 
+    <include
+        android:id="@+id/footer_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/activity_cavalier_footer_cours"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" />
 
-</LinearLayout>
+</RelativeLayout>
 
