--- a/app/src/main/res/layout/activity_cavalier_add_personne.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_personne.xml
@@ -35,7 +35,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/nom"
+                android:text="Nom"
                 android:textSize="20sp"
                 android:id="@+id/textView2"
                 android:layout_column="0" />
