--- a/app/src/main/res/layout/activity_cavalier_add_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_cours.xml
@@ -183,7 +183,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:textSize="20sp"
-            android:inputType="textMultiLine|textCapWords"
+            android:inputType="textMultiLine"
             android:lines="2" />
 
     </TableLayout>
