--- a/app/src/main/res/layout/activity_cavalier_list_cours_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_cours_item.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="120dp">
+        android:layout_marginLeft="100dp">
     </TextView>
 
     <TextView android:text="Monture" android:id="@+id/monture"
@@ -26,7 +26,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="220dp">
+        android:layout_marginLeft="200dp">
     </TextView>
+
+    <ImageButton
+        android:id="@+id/deleteCours"
+        android:layout_width="32dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="220dp"
+        android:contentDescription="Supprimer"
+        android:background="#00000000"
+        android:src="@drawable/delete" />
 
 </RelativeLayout>
