--- a/app/src/main/res/layout-land/activity_cavalier_list_cours_item.xml
+++ b/app/src/main/res/layout-land/activity_cavalier_list_cours_item.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="120dp">
+        android:layout_marginLeft="100dp">
     </TextView>
 
     <TextView android:text="Monture" android:id="@+id/monture"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="220dp">
+        android:layout_marginLeft="200dp">
     </TextView>
 
     <TextView android:text="Moniteur" android:id="@+id/moniteur"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="320dp">
+        android:layout_marginLeft="300dp">
     </TextView>
 
     <TextView android:text="Lieu" android:id="@+id/lieu"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="420dp">
+        android:layout_marginLeft="400dp">
     </TextView>
 
     <TextView android:text="Durée" android:id="@+id/duree"
@@ -50,15 +50,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="510dp">
+        android:layout_marginLeft="490dp">
     </TextView>
 
     <ImageButton
         android:id="@+id/deleteCours"
-        android:layout_width="32dp"
-        android:layout_height="wrap_content"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:scaleType="fitCenter"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="530dp"
+        android:layout_marginLeft="510dp"
         android:contentDescription="Supprimer"
         android:background="#00000000"
         android:src="@drawable/delete" />
