--- a/app/src/main/res/layout/activity_cavalier_list_cours_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_cours_item.xml
@@ -26,17 +26,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="200dp">
+        android:layout_marginLeft="190dp">
     </TextView>
 
     <ImageButton
         android:id="@+id/deleteCours"
-        android:layout_width="32dp"
-        android:layout_height="wrap_content"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="220dp"
+        android:layout_marginLeft="290dp"
         android:contentDescription="Supprimer"
         android:background="#00000000"
+        android:scaleType="fitCenter"
         android:src="@drawable/delete" />
 
 </RelativeLayout>
