--- a/app/src/main/res/layout-land/activity_cavalier_header_cours.xml
+++ b/app/src/main/res/layout-land/activity_cavalier_header_cours.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginLeft="100dp">
+        android:layout_marginLeft="80dp">
     </TextView>
 
     <TextView android:text="Monture" android:id="@+id/monture"
@@ -30,7 +30,7 @@
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginLeft="200dp">
+        android:layout_marginLeft="170dp">
     </TextView>
 
     <TextView android:text="Moniteur" android:id="@+id/moniteur"
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
-        android:layout_marginLeft="300dp">
+        android:textStyle="bold"
+        android:layout_marginLeft="270dp">
     </TextView>
 
     <TextView android:text="Lieu" android:id="@+id/lieu"
@@ -47,7 +48,7 @@
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginLeft="400dp">
+        android:layout_marginLeft="380dp">
     </TextView>
 
     <TextView android:text="H" android:id="@+id/duree"
@@ -56,7 +57,7 @@
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginLeft="490dp">
+        android:layout_marginLeft="460dp">
     </TextView>
 
 </RelativeLayout>
