--- a/app/src/main/res/layout/activity_cavalier_list_cours_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_cours_item.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="100dp">
+        android:layout_marginLeft="80dp">
     </TextView>
 
     <TextView android:text="Monture" android:id="@+id/monture"
@@ -26,8 +26,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="15sp"
-        android:layout_marginLeft="190dp">
+        android:layout_marginLeft="170dp">
     </TextView>
+
+    <ImageButton
+        android:id="@+id/obsCours"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="260dp"
+        android:contentDescription="Observation"
+        android:background="#00000000"
+        android:scaleType="fitCenter"
+        android:src="@drawable/details" />
 
     <ImageButton
         android:id="@+id/deleteCours"
