--- a/app/src/main/res/menu/menu_cavalier_add_personne.xml
+++ b/app/src/main/res/menu/menu_cavalier_add_personne.xml
@@ -11,7 +11,7 @@
 
     <item android:id="@+id/action_close_personne"
         android:title="@string/action_close"
-        app:icon="@drawable/smallclose"
+        app:icon="@drawable/smallexit"
         app:showAsAction="ifRoom" />
 
     <item android:id="@+id/action_delete_personne"
