--- a/app/src/main/res/menu/menu_cavalier_list_monture.xml
+++ b/app/src/main/res/menu/menu_cavalier_list_monture.xml
@@ -10,7 +10,7 @@
 
     <item android:id="@+id/action_close_list"
         android:title="@string/action_close"
-        app:icon="@drawable/smallclose"
+        app:icon="@drawable/smallexit"
         app:showAsAction="ifRoom" />
 
 
