--- a/app/src/main/res/menu/menu_cavalier_list_personne.xml
+++ b/app/src/main/res/menu/menu_cavalier_list_personne.xml
@@ -13,5 +13,11 @@
         app:icon="@drawable/smallexit"
         app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_import"
+        android:title="Import"
+        app:icon="@drawable/import_data"
+        app:showAsAction="ifRoom" />
+
+
 
 </menu>
