--- a/app/src/main/res/menu/menu_cavalier_list_cours.xml
+++ b/app/src/main/res/menu/menu_cavalier_list_cours.xml
@@ -40,4 +40,9 @@
         app:icon="@drawable/smallexit"
         app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_import"
+        android:title="Import"
+        app:icon="@drawable/import_data"
+        app:showAsAction="ifRoom" />
+
 </menu>
