--- a/app/src/main/res/menu/menu_cavalier_add_monture.xml
+++ b/app/src/main/res/menu/menu_cavalier_add_monture.xml
@@ -7,12 +7,19 @@
     <item android:id="@+id/action_add_monture"
         android:title="@string/action_save"
         app:icon="@drawable/smallsave"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+
 
     <item android:id="@+id/action_close_monture"
         android:title="@string/action_close"
         app:icon="@drawable/smallexit"
+        app:showAsAction="always" />
+
+    <item android:id="@+id/action_picture"
+        android:title="Photo"
+        app:icon="@drawable/camera"
         app:showAsAction="ifRoom" />
+
 
     <item android:id="@+id/action_delete_monture"
         android:title="@string/action_delete"
