--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+
+    <item
+        android:id="@+id/kath"
+        android:title="@string/menu_kath"
+        app:icon="@drawable/cheval"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/hippologie"
+        android:title="@string/menu_hippologie"
+        app:icon="@drawable/cheval"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/export_db"
         android:title="@string/menu_export_db"
         app:icon="@drawable/backup"
         app:showAsAction="never" />
+
+
 
 
 </menu>
